# slowjs

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Makefile  NOTES.md  README.md  ast.c  file.c  interpret.c  lex.c  main.c  parse.c  vector.c
examples/: function_call.js  parameters.js  plus.js
include/slowjs/: ast.h  common.h  file.h  interpret.h  lex.h  parse.h  vector.h
scripts/: test.js  test.sh
src/: ast.c  file.c  interpret.c  lex.c  lex.cc  lexer.js  main.c  main.cc  parse.c  parser.js  test_lexer.js
test/: CMakeLists.txt  lex.cc  lex.cpp  main.cc  parse.cpp  vector.cpp
